noticed: prb with uppercase characters in names (see Foo vs foo)

--- a/src/MvcVueApp1/MvcVueApp1/Vue/components/comp1.html
+++ b/src/MvcVueApp1/MvcVueApp1/Vue/components/comp1.html
@@ -6,6 +6,7 @@
 </template>-->
 
 <script>
+    // note: PAS de majuscule (i.e.: ça marche avec foo, pas avec Foo - looooool - vraiment magnifique DOM, html, et javascript en général)
     Vue.component('comp1', {
         template: '#comp1-template',
         props: ['foo'],
