--- a/src/MvcVueApp1/MvcVueApp1/Vue/templates/maintemplate.html
+++ b/src/MvcVueApp1/MvcVueApp1/Vue/templates/maintemplate.html
@@ -7,5 +7,6 @@
     <br />
     <span>text from input component comp1</span>
     <br />
+    <!-- note: PAS de majuscule; en fait il s'en fout ici, mais il n'en faut pas dans le composant comp11 apparemment (voir comp1.html) -->
     <comp1 v-bind:foo="firstName"></comp1>
 </div>
